<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/createText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="8dp"
        android:text="@string/cambiar_idioma"
        android:textAlignment="viewStart"
        android:textColor="@color/colorTextoGris"
        android:textSize="22sp" />

    <RadioGroup
        android:layout_marginStart="30dp"
        android:id="@+id/radio_group_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_button_english"
            style="@style/TEXTVIEW_WHITE_DARK_TEMA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/ingles"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_button_spanish"
            style="@style/TEXTVIEW_WHITE_DARK_TEMA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/espanol"
            android:textSize="18sp" />
    </RadioGroup>


</LinearLayout>